--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -39,7 +39,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      &copy; {{ site.time | date: "%Y" }} Will Koehler
+      &copy; {{ site.time | date: "%Y" }}    Mesbah Uddin <!--Will Koehler-->
         
       <nav>
         <a href="/">Blog</a> &middot;
